--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
+    "@ffprobe-installer/ffprobe": "^1.0.12",
     "aws-sdk": "^2.581.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "jquery": "^3.4.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
@@ -26,11 +30,14 @@
     "mysql2": "^2.0.1",
     "nodemon": "^2.0.1",
     "path": "^0.12.7",
+    "popper": "^1.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-popper": "^1.3.6",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
     "sqlite3": "^4.1.0",
+    "styled-components": "^4.4.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
@@ -39,8 +46,22 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.3",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "file-loader": "^5.0.2",
+    "jest": "^24.9.0",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
@@ -49,6 +70,14 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kle-io/toolbar.git"
+  },
+  "jest": {
+    "setupFiles": [
+      "./src/setupTests.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "keywords": [],
   "bugs": {
