--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "node server/index.js",
     "webpack": "webpack -d --watch",
-    "db:setup": "npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
+    "db:setup": "npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
+    "webpack2": "webpack --mode=production"
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
@@ -18,6 +19,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "fluent-ffmpeg": "^2.1.2",
@@ -34,7 +36,6 @@
     "react-popper": "^1.3.6",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
-    "sqlite3": "^4.1.0",
     "styled-components": "^4.4.1",
     "url": "^0.11.0"
   },
