code clean up and refactoring

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "node server/index.js",
+    "start": "nodemon server/index.js",
     "webpack": "webpack -d --watch",
     "db:setup": "npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
     "webpack2": "webpack --mode=production"
